--- a/E-CommerceCaseAndroid/settings.gradle
+++ b/E-CommerceCaseAndroid/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Case"
+rootProject.name = "ACase"
 include ':app'
